welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: not found: value trouve
  while(trouve == false lookingFor && i<(nums.length-1))
        ^indexOfValue:4: error: not found: value &&
  while(trouve == false lookingFor && i<(nums.length-1))
                                   ^indexOfValue:4: error: not found: value <
  while(trouve == false lookingFor && i<(nums.length-1))
                                       ^indexOfValue:7: error: not found: value trouve
    if(nums(i)!= lookingFor){trouve = true}
                             ^indexOfValue:9: error: not found: value trouve
  if(trouve == true){return i}
     ^